--- a/ToDoListApp/src/main/resources/baseline/ToDoStructure.fxml
+++ b/ToDoListApp/src/main/resources/baseline/ToDoStructure.fxml
@@ -33,7 +33,6 @@
 -->
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
@@ -41,8 +40,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="baseline.ToDoHomeController">
    <children>
       <SplitPane dividerPositions="0.11705685618729098" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -50,27 +48,31 @@
                <children>
                   <VBox prefHeight="200.0" prefWidth="67.0" AnchorPane.bottomAnchor="198.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Show List" />
-                        <Button mnemonicParsing="false" text="Add List" />
-                        <Button alignment="CENTER" mnemonicParsing="false" text="Save List" />
-                        <Button mnemonicParsing="false" text="Load List" />
+                        <Button fx:id="addListButton" mnemonicParsing="false" onAction="#addList" prefHeight="25.0" prefWidth="76.0" text="Add List" />
+                        <Button fx:id="saveListButton" alignment="CENTER" mnemonicParsing="false" onAction="#saveListToMemory" prefHeight="25.0" prefWidth="70.0" text="Save List" />
+                        <Button fx:id="loadListButton" mnemonicParsing="false" onAction="#loadListFromMemory" prefHeight="25.0" prefWidth="75.0" text="Load List" />
                      </children>
                   </VBox>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <ListView prefHeight="398.0" prefWidth="529.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <contextMenu>
-                        <ContextMenu>
-                          <items>
-                            <MenuItem fx:id="EditListButton" mnemonicParsing="false" text="Edit List" />
-                              <MenuItem fx:id="RemoveListButton" mnemonicParsing="false" text="Remove List" />
-                              <CheckMenuItem fx:id="ListDoneCheckButton" mnemonicParsing="false" text="Mark List As Done" />
-                          </items>
-                        </ContextMenu>
-                     </contextMenu>
-                  </ListView>
+                  <VBox prefHeight="398.0" prefWidth="525.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <ListView fx:id="list" prefHeight="290.0" prefWidth="525.0">
+                           <contextMenu>
+                              <ContextMenu fx:id="listContextMenu">
+                                <items>
+                                    <MenuItem fx:id="ShowListButton" mnemonicParsing="false" onAction="#showList" text="Show List" />
+                                  <MenuItem fx:id="EditListButton" mnemonicParsing="false" onAction="#editList" text="Edit List" />
+                                    <MenuItem fx:id="RemoveListButton" mnemonicParsing="false" onAction="#removeList" text="Remove List" />
+                                </items>
+                              </ContextMenu>
+                           </contextMenu>
+                        </ListView>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                  </VBox>
                </children>
             </AnchorPane>
         </items>
